--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-core": "^6.26.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
-    "redux": "^3.7.2"
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
